add user/get api
